--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@
 
  .container-top {
      display: flex;
-     justify-content: space-between;
+    justify-content: space-evenly;
      background-color: #eccca2;
      padding: 10px;
      border-bottom: 5px solid #e1bf92;
@@ -32,7 +32,7 @@
 
  .container-mid {
      max-width: 510px;
-     margin: 10px auto;
+    margin: 5px auto;
      border-radius: 10px;
      padding: 10px;
      background-color: #eccca2;
@@ -82,8 +82,7 @@
 
  .logo {
      width: 48px;
-     height: 48px;
-     margin-right: 10px;
+    height: 48px;
  }
 
  .brand {
@@ -91,6 +90,7 @@
      font-size: 32px;
      text-wrap: nowrap;
      align-self: center;
+    margin-right: 20px;
  }
 
  /* Headlines */
@@ -152,7 +152,7 @@
      text-wrap: nowrap;
  }
 
- .submit {
+ .order-submit {
      grid-area: 9 / 1 / span 1 / span 10;
      text-align: end;
  }
@@ -198,20 +198,58 @@
      accent-color: white;
  }
 
+ input[type="radio"] {
+     vertical-align: middle;
+ }
+
+ label[for="sweden"],
+ label[for="other"] {
+     font-size: 13px;
+ }
  button[type="submit"] {
-     color: rgba(80, 65, 57, 95%);
+    color: white;
      padding: 5px;
-     background-color: #f6d7b0;
+    background-color: #517339;
      border: 2px solid rgba(80, 65, 57, 30%);
      border-radius: 3px;
+    letter-spacing: 0.5px;
      font-size: 12px;
      font-family: 'Saira', sans-serif;
  }
 
+ /* Pseudo selectors */
+
+ .brand:hover {
+     color: #649245;
+     cursor: default;
+ }
+
+ input[type="text"]:hover,
+ input[type="password"]:hover,
+ input[type="number"]:hover,
+ input[type="email"]:hover {
+     background-color: #f6dcbd;
+ }
+
+ input[type="text"]:focus,
+ input[type="password"]:focus,
+ input[type="number"]:focus,
+ input[type="email"]:focus {
+     background-color: #f6dcbd;
+ }
  input::placeholder {
      font-size: 14px;
      font-family: 'Saira', sans-serif;
+.button:hover {
+    background-color: #649245;
+    color: white;
+    border-color: rgba(80, 65, 57, 90%);
+}
 
+ .button:active {
+     box-shadow: inset 0 0 5px rgba(80, 65, 57, 90%);
+     border-color: rgba(80, 65, 57, 90%);
+     color: whitesmoke;
  }
 
  /* Responsive */
