--- a/style.css
+++ b/style.css
@@ -18,16 +18,16 @@
      display: flex;
      flex-direction: column;
      position: relative;
-     min-width: 375px;
      min-height: 100vh;
  }
 
  .container-top {
      display: flex;
-     justify-content: space-evenly;
+     justify-content: center;
      background-color: #eccca2;
      padding: 10px;
      border-bottom: 5px solid #e1bf92;
+
  }
 
  .container-mid {
@@ -59,7 +59,7 @@
      column-gap: 5px;
  }
 
- .sub-grid {
+ .top-grid {
      display: grid;
      grid-template-columns: repeat(5, 1fr);
      column-gap: 5px;
@@ -87,9 +87,9 @@
  .brand {
      color: #517339;
      font-size: 32px;
-     text-wrap: nowrap;
+     white-space: nowrap;
      align-self: center;
-     margin-right: 20px;
+     margin-right: 30px;
  }
 
  /* Headlines */
@@ -148,7 +148,7 @@
      padding: 10px;
      font-size: 12px;
      justify-content: center;
-     text-wrap: nowrap;
+     white-space: nowrap;
  }
 
  .order-submit {
@@ -156,7 +156,7 @@
      text-align: end;
  }
 
- /* Start of input fields in sub-grid */
+ /* Start of input fields in top-grid */
 
  .username {
      grid-area: 1 / 1 / span 1 / span 2;
@@ -164,17 +164,28 @@
 
  .password {
      grid-area: 1 / 3 / span 1 / span 2;
+
  }
 
  .login-submit {
      grid-area: 1 / 5 / span 1 / span 1;
-     text-wrap: nowrap;
+     white-space: nowrap;
  }
 
  /* Footer */
 
  .credit {
      font-size: 13px;
+ }
+
+ /* Hiding lables from anything but screen readers - this one I had to google */
+
+ .hidden {
+     clip: rect(0 0 0 0);
+     clip-path: inset(50%);
+     overflow: hidden;
+     position: absolute;
+     white-space: nowrap;
  }
 
  /* Additional styling */
@@ -227,10 +238,7 @@
  input[type="text"]:hover,
  input[type="password"]:hover,
  input[type="number"]:hover,
- input[type="email"]:hover {
-     background-color: #f6dcbd;
- }
-
+ input[type="email"]:hover,
  input[type="text"]:focus,
  input[type="password"]:focus,
  input[type="number"]:focus,
@@ -276,7 +284,7 @@
          flex-direction: column;
      }
 
-     .sub-grid {
+     .top-grid {
          align-self: center;
      }
  }
